Fix low resolution map on mobile

--- a/src/styles/mapstyles.css
+++ b/src/styles/mapstyles.css
@@ -59,5 +59,5 @@ img {
 }
 
 img.leaflet-tile.leaflet-tile-loaded {
-    border:1px solid #000000;
+    /* border:1px solid #000000; */
 }
